# django-llm-chat

./: README.md  conftest.py  pyproject.toml
django_llm_chat/: admin.py  apps.py  chat.py  dspy_chat.py  models.py  services.py  urls.py  views.py
django_llm_chat/migrations/: 0001_initial.py  0002_llmcache.py  0004_dspy_support_fields.py
django_llm_chat/templates/django_llm_chat/: base.html  llm_call_detail.html  llm_call_list.html
django_llm_chat/tests/: settings.py  test_chat.py  test_dspy_chat.py  test_project.py  test_views.py  urls.py
